# internal/delivery/http/v1/handler/handler.go
@@ -6,22 +6,12 @@ import (
 	"github.com/theborzet/jwt_token/internal/service"
 )
 
-type SuccessResponse struct {
-	AccessToken  string `json:"access_token"`
-	RefreshToken string `json:"refresh_token"`
-}
-
-type ErrorResponse struct {
-	Error   string `json:"error"`
-	Message string `json:"message"`
-}
-
 type ApiHandler struct {
-	serv   *service.ApiService
+	serv   service.Service
 	logger *log.Logger
 }
 
-func NewApiHandler(serv *service.ApiService, logger *log.Logger) *ApiHandler {
+func NewApiHandler(serv service.Service, logger *log.Logger) *ApiHandler {
 	return &ApiHandler{
 		serv:   serv,
 		logger: logger}
