# internal/delivery/http/v1/handler/token_handler.go
@@ -8,6 +8,7 @@ import (
 
 type request struct {
 	RefreshToken string `json:"refresh_token"`
+	AccessToken  string `json:"access_token"`
 }
 
 type successResponse struct {
@@ -20,18 +21,18 @@ type errorResponse struct {
 	Message string `json:"message"`
 }
 
-// IssueTokensHandler обрабатывает POST запрос для выдачи Access и Refresh токенов.
 // @Summary Выдать токены
 // @Description Выдает пару Access и Refresh токенов для пользователя с указанным ID.
+// Токены возвращаются в теле ответа и должны быть сохранены вручную на клиентской стороне для последующего использования.
 // @Accept json
 // @Produce json
-// @Param id path string true "ID пользователя (GUID)"
-// @Success 200 {object} successResponse{access_token=string, refresh_token=string}
+// @Param userID path string true "ID пользователя (GUID)"
+// @Success 200 {object} successResponse
 // @Failure 400 {object} errorResponse
 // @Failure 500 {object} errorResponse
-// @Router /issue-tokens/{id} [post]
+// @Router /api/v1/auth/token/{userID} [post]
 func (h *ApiHandler) IssueTokensHandler(ctx *fiber.Ctx) error {
-	userId := ctx.Params("id")
+	userId := ctx.Params("userID")
 	ip := ctx.IP()
 
 	accessToken, refreshToken, err := h.serv.IssueTokens(userId, ip)
@@ -48,19 +49,20 @@ func (h *ApiHandler) IssueTokensHandler(ctx *fiber.Ctx) error {
 
 }
 
-// RefreshTokensHandler обрабатывает POST запрос для обновления Access и Refresh токенов.
 // @Summary Обновить токены
-// @Description Обновляет пару Access и Refresh токенов, используя предоставленный Refresh токен.
+// @Description Обновляет пару Access и Refresh токенов, используя предоставленные Refresh и Access токены.
+// Токены должны быть переданы в теле запроса. Обновленные токены возвращаются в теле ответа и должны быть сохранены вручную на клиентской стороне.
+// Это все для упрощения, по-хорошему их нужно хранить в кэше или на крайний случай в куках
 // @Accept json
 // @Produce json
-// @Param id path string true "ID пользователя (GUID)"
-// @Param request body request true "Refresh токен"
-// @Success 200 {object} successResponse{access_token=string, refresh_token=string}
+// @Param userID path string true "ID пользователя (GUID)"
+// @Param request body request true "Тело запроса с токенами"
+// @Success 200 {object} successResponse
 // @Failure 400 {object} errorResponse
 // @Failure 500 {object} errorResponse
-// @Router /refresh-tokens/{id} [post]
+// @Router /api/v1/auth/token/refresh/{userID} [post]
 func (h *ApiHandler) RefreshTokensHandler(ctx *fiber.Ctx) error {
-	userId := ctx.Params("id")
+	userId := ctx.Params("userID")
 	var req request
 	if err := ctx.BodyParser(&req); err != nil {
 		return ctx.Status(fiber.StatusBadRequest).JSON(errorResponse{
@@ -70,7 +72,7 @@ func (h *ApiHandler) RefreshTokensHandler(ctx *fiber.Ctx) error {
 	}
 	ipAddress := ctx.IP()
 
-	accessToken, refreshToken, err := h.serv.RefreshTokens(userId, req.RefreshToken, ipAddress)
+	accessToken, refreshToken, err := h.serv.RefreshTokens(userId, req.AccessToken, req.RefreshToken, ipAddress)
 	if err != nil {
 		return ctx.Status(fiber.StatusInternalServerError).JSON(errorResponse{
 			Error:   err.Error(),
